# mulled

./: .clang-format  .clang-tidy  .gitignore  .neocmake.toml  CMakeLists.txt
benchmarks/: CMakeLists.txt  bench_matmul.cpp
include/mulled/: matmul.hpp
src/: matmul.ispc
tests/: CMakeLists.txt  test_matmul.cpp
